# BAMReX

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README  README.md  amrex_1d_plot.ipynb  visit_exp_2d_T.xml  visit_expressions_2d.xml  visit_schlieren_expression.xml
Exec/: CMakeLists.txt  Make.Adv
Exec/Advection/: CMakeLists.txt  Prob.H  Prob.cpp  generate_inputs.sh
Exec/Advection/inputs/: inputs-eps1-16  inputs-eps1-32  inputs-eps1-64
Exec/Advection/inputs-IMEX/: eps1-PESK-MUSCL-SASSP322-0020  eps1-PESK-MUSCL-SASSP322-0060  eps1-PESK-MUSCL-SASSP322-0100  eps1-PESK-MUSCL-SASSP322-0200  eps1-PESK-MUSCL-SASSP322-0400  eps1-PESK-MUSCL-SASSP322-0800  eps1-PESK-MUSCL-SASSP332-0020  eps1-PESK-MUSCL-SASSP332-0060  eps1-PESK-MUSCL-SASSP332-0100  eps1-PESK-MUSCL-SASSP332-0200  eps1-PESK-MUSCL-SASSP332-0400  eps1-PESK-MUSCL-SASSP332-0800  eps1-PESK-MUSCL-SSP222-0020  eps1-PESK-MUSCL-SSP222-0060  eps1-PESK-MUSCL-SSP222-0100  eps1-PESK-MUSCL-SSP222-0200  eps1-PESK-MUSCL-SSP222-0400  eps1-PESK-MUSCL-SSP222-0800  eps1-PESK-SP111-0020  eps1-PESK-SP111-0060  eps1-PESK-SP111-0100  eps1-PESK-SP111-0200  eps1-PESK-SP111-0400  eps1-PESK-SP111-0800
Exec/Advection/inputs-exp/: eps1-MHM-0020  eps1-MHM-0060  eps1-MHM-0100  eps1-MHM-0200  eps1-MHM-0400  eps1-MHM-0800  eps1e-5-MHM-0020  eps1e-5-MHM-0060  eps1e-5-MHM-0100  eps1e-5-MHM-0200
Exec/Advection/problem-inputs/: eps1  eps1e-5
Exec/CylindricalExplosion/: CMakeLists.txt  Prob.cpp  inputs  problem-inputs
Exec/CylindricalExplosion/inputs/: cyl-FI-MUSCL-SSP222-0256  cyl-FI-SP111-0256  cyl-HLLC-0200  cyl-HLLC-0256  cyl-MHM-0256  cyl-PEEK-MUSCL-SSP222-0256  cyl-PEEK-MUSCL-SSP222-STAB-0256  cyl-PEEK-SP111-0200  cyl-PEEK-SP111-0256  cyl-PESK-MUSCL-SSP222-0256  sph-HLLC-0200
Exec/CylindricalExplosion/inputs-ref/: cyl-RCM-1000  cyl-RCM-5000  sph-RCM-1000
Exec/Geometry/: CMakeLists.txt  Prob.H  Prob.cpp
Exec/Geometry/inputs/: cone  cylinder  nozzle  plane  polygon_union  wedge
Exec/GreshoVortex/: CMakeLists.txt  Prob.H  Prob.cpp
Exec/GreshoVortex/input-bases/: FI-MUSCL-SSP222  FI-SP111  HLLC  MHM  PEEK-MUSCL-SSP222  PEEK-SP111  PESK-MUSCL-SSP222  PESK-SP111
Exec/GreshoVortex/inputs/: M1-FI-MUSCL-SSP222-0100  M1-FI-MUSCL-SSP222-0128  M1-FI-MUSCL-SSP222-0512  M1-FI-SP111-0128  (+60 more)
Exec/GreshoVortex/inputs-M1/: M1-FI-MUSCL-SSP222-0128  M1-FI-MUSCL-SSP222-0256  M1-FI-MUSCL-SSP222-0512  M1-FI-MUSCL-SSP222-1024  M1-FI-SP111-0128  M1-FI-SP111-0256  M1-FI-SP111-0512  M1-FI-SP111-1024  M1-HLLC-0128  M1-HLLC-0256  M1-HLLC-0512  M1-HLLC-1024  M1-MHM-0128  M1-MHM-0256  M1-MHM-0512  M1-MHM-1024  M1-PEEK-MUSCL-SSP222-0128  M1-PEEK-MUSCL-SSP222-0256  M1-PEEK-MUSCL-SSP222-0512  M1-PEEK-MUSCL-SSP222-1024  M1-PEEK-SP111-0128  M1-PEEK-SP111-0256  M1-PEEK-SP111-0512  M1-PEEK-SP111-1024  M1-PESK-MUSCL-SSP222-0128  M1-PESK-MUSCL-SSP222-0256  M1-PESK-MUSCL-SSP222-0512  M1-PESK-MUSCL-SSP222-1024  M1-PESK-SP111-0128  M1-PESK-SP111-0256  M1-PESK-SP111-0512  M1-PESK-SP111-1024
Exec/GreshoVortex/inputs-M1e-2/: M1e-2-FI-MUSCL-SSP222-0128  M1e-2-FI-MUSCL-SSP222-0256  M1e-2-FI-MUSCL-SSP222-0512  M1e-2-FI-MUSCL-SSP222-1024  M1e-2-FI-SP111-0128  M1e-2-FI-SP111-0256  M1e-2-FI-SP111-0512  M1e-2-FI-SP111-1024  M1e-2-HLLC-0128  M1e-2-HLLC-0256  M1e-2-HLLC-0512  M1e-2-HLLC-1024  M1e-2-MHM-0128  M1e-2-MHM-0256  M1e-2-MHM-0512  M1e-2-MHM-1024  M1e-2-PEEK-MUSCL-SSP222-0128  M1e-2-PEEK-MUSCL-SSP222-0256  M1e-2-PEEK-MUSCL-SSP222-0512  M1e-2-PEEK-MUSCL-SSP222-1024  M1e-2-PEEK-SP111-0128  M1e-2-PEEK-SP111-0256  M1e-2-PEEK-SP111-0512  M1e-2-PEEK-SP111-1024  M1e-2-PESK-MUSCL-SSP222-0128  M1e-2-PESK-MUSCL-SSP222-0256  M1e-2-PESK-MUSCL-SSP222-0512  M1e-2-PESK-MUSCL-SSP222-1024  M1e-2-PESK-SP111-0128  M1e-2-PESK-SP111-0256  M1e-2-PESK-SP111-0512  M1e-2-PESK-SP111-1024
Exec/GreshoVortex/inputs-M1e-4/: M1e-4-FI-MUSCL-SSP222-0128  M1e-4-FI-MUSCL-SSP222-0256  M1e-4-FI-MUSCL-SSP222-0512  M1e-4-FI-MUSCL-SSP222-1024  M1e-4-FI-SP111-0128  M1e-4-FI-SP111-0256  M1e-4-FI-SP111-0512  M1e-4-FI-SP111-1024  M1e-4-HLLC-0128  M1e-4-HLLC-0256  M1e-4-HLLC-0512  M1e-4-HLLC-1024  M1e-4-MHM-0128  M1e-4-MHM-0256  M1e-4-MHM-0512  M1e-4-MHM-1024  M1e-4-PEEK-MUSCL-SSP222-0128  M1e-4-PEEK-MUSCL-SSP222-0256  M1e-4-PEEK-MUSCL-SSP222-0512  M1e-4-PEEK-MUSCL-SSP222-1024  M1e-4-PEEK-SP111-0128  M1e-4-PEEK-SP111-0256  M1e-4-PEEK-SP111-0512  M1e-4-PEEK-SP111-1024  M1e-4-PESK-MUSCL-SSP222-0128  M1e-4-PESK-MUSCL-SSP222-0256  M1e-4-PESK-MUSCL-SSP222-0512  M1e-4-PESK-MUSCL-SSP222-1024  M1e-4-PESK-SP111-0128  M1e-4-PESK-SP111-0256  M1e-4-PESK-SP111-0512  M1e-4-PESK-SP111-1024
Exec/IsentropicVortex/: CMakeLists.txt  Prob.H  Prob.cpp  gen_inputs.sh  problem_inputs_moving  problem_inputs_stationary  run.sh  run_mov.sh
Exec/Jet/: CMakeLists.txt  Prob.H  Prob.cpp
Exec/OrszagTang/: CMakeLists.txt  Prob.cpp
Exec/QuadrantProblem/: Adv_prob.cpp  CMakeLists.txt  Prob.cpp  inputs-test2
Exec/RiemannProblem/: Adv_prob.cpp  CMakeLists.txt  Prob.H  Prob.cpp  Prob_Parm.H  face_velocity_3d_K.H  inputs  inputs-test1  inputs-test2  inputs-test3  inputs-test4  inputs-test5  problem-inputs_contact  problem-inputs_lax  problem-inputs_test1  problem-inputs_test1scaled
Exec/RiemannProblem2D/: Adv_prob.cpp  CMakeLists.txt  Prob.H  Prob.cpp  Prob_Parm.H  inputs-test1  inputs-test2
Exec/SinProblem/: CMakeLists.txt  Prob.H  Prob.cpp  generate_inputs.sh  problem-inputs  problem-inputs-eps001  problem-inputs-eps1  problem-inputs-eps1e-5  problem-inputs-eps1e-5-TMP
Exec/UniformVelocity/: Adv_prob.cpp  Backtrace.0  CMakeLists.txt  GNUmakefile  Prob.H  Prob_Parm.H  face_velocity_2d_K.H  inputs
Profiling/: CMakeLists.txt  Prob.H  README.md  explicit_scaling.cpp  multifab_adding.cpp
Tests/: BoxTest.H  CMakeLists.txt  Euler01.cpp  ExactRiemann01.cpp  GFMFlag01.cpp  GFMFlag02.cpp  Geometry01.cpp  HLLC01.cpp  HLLC02.cpp  IMEXButcherTableaux01.cpp  IMEX_O1_01.cpp  Interp01.cpp  Limiters01.cpp  Limiting01.cpp  MLABecLapGrad01.cpp  Multidim.H  PlasmaSystem01.cpp  PressureSourceVec01.cpp  Prob.H  Prob_Parm.H  PseudoRandom01.cpp  RootFinding01.cpp  RusanovAdv01.cpp  UnigridTest.H  UnitDomainTest.H  Update01.cpp  hllc_test.H  test_main.cpp
(+1613 files in other folders)
